; ModuleID = '/home/carl/AnghaBench/darwin-xnu/tests/extr_kdebug.c_assert_kdebug_test.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/tests/extr_kdebug.c_assert_kdebug_test.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CTL_KERN = common dso_local global i32 0, align 4
@KERN_KDEBUG = common dso_local global i32 0, align 4
@KERN_KDTEST = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [19 x i8] c"KERN_KDTEST sysctl\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @assert_kdebug_test to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @assert_kdebug_test(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  %4 = alloca [3 x i32], align 4
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = zext i32 %5 to i64
  store i64 %6, i64* %3, align 8
  %7 = getelementptr inbounds [3 x i32], [3 x i32]* %4, i64 0, i64 0
  %8 = load i32, i32* @CTL_KERN, align 4
  store i32 %8, i32* %7, align 4
  %9 = getelementptr inbounds i32, i32* %7, i64 1
  %10 = load i32, i32* @KERN_KDEBUG, align 4
  store i32 %10, i32* %9, align 4
  %11 = getelementptr inbounds i32, i32* %9, i64 1
  %12 = load i32, i32* @KERN_KDTEST, align 4
  store i32 %12, i32* %11, align 4
  %13 = getelementptr inbounds [3 x i32], [3 x i32]* %4, i64 0, i64 0
  %14 = call i32 @sysctl(i32* %13, i32 3, i32* null, i64* %3, i32* null, i32 0)
  %15 = call i32 @T_ASSERT_POSIX_SUCCESS(i32 %14, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0))
  ret void
}

declare dso_local i32 @T_ASSERT_POSIX_SUCCESS(i32, i8*) #1

declare dso_local i32 @sysctl(i32*, i32, i32*, i64*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
